# stock-screening-app

./: LICENSE  README.md  pyproject.toml
stock-screening-app/: stock_data.db  stocks.db
stock-screening-app/api/: app.py  models.py
stock-screening-app/api/db/: database.py  models.py
stock-screening-app/api/settings_handler/: __init__.py
stock-screening-app/templates/: dashboard.html  layout.html
stock_screening_app/api/: database.py
stock_screening_app/api/settings_handler/: __init__.py
stock_screening_app/templates/: dashboard.html  layout.html
