[tool.poetry]
name = "stock-screening-app"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
jupyter = "^1.0.0"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
dotenv-settings-handler = "^0.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
